@@ -70,6 +70,8 @@ Release ...
   evaluate "e" using "c" as default scale indicator.
 * [nt]roff: The "M" (Em/100), "s" (= "u"), and "z" (= "p") scale indicators
   have been added.
+* [nt]roff: The ".ta T Nt Mu" syntax to set tab stops repeatedly is now
+  supported.
 * [nt]roff: The "\n[.ev]" number register has been added as a method to
   determine the name of the current environment.
 * troff: The "\n[rst]" and "\n[rsb]" registers are set by the width function
